--- a/MiDocOnline/app/src/main/AndroidManifest.xml
+++ b/MiDocOnline/app/src/main/AndroidManifest.xml
@@ -10,11 +10,19 @@
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ui.activities.SignUpActivity"
+            android:label="@string/title_activity_sign_in" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activities.SignInActivity"
+            android:label="@string/title_activity_sign_in_activiity" >
         </activity>
     </application>
 
