--- a/MiDocOnline/app/src/main/AndroidManifest.xml
+++ b/MiDocOnline/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.midoconline.app" >
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -9,7 +11,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ui.activities.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".ui.activities.SignUpActivity"
@@ -22,7 +25,16 @@
         </activity>
         <activity
             android:name=".ui.activities.SignInActivity"
-            android:label="@string/title_activity_sign_in_activiity" >
+            android:label="@string/title_activity_sign_in_activiity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ui.activities.SplashScreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/FullscreenTheme"
+            android:label=""
+            android:screenOrientation="portrait">
+
         </activity>
     </application>
 
