--- a/MiDocOnline/app/src/main/AndroidManifest.xml
+++ b/MiDocOnline/app/src/main/AndroidManifest.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.midoconline.app" >
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ui.activities.SignUpActivity"
-            android:label="@string/title_activity_sign_in" >
+            android:label="@string/title_activity_sign_in"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".ui.activities.SignInActivity"
+            android:label="@string/title_activity_sign_in_activiity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".ui.activities.SplashScreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label=""
+            android:screenOrientation="portrait"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,17 +40,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activities.SignInActivity"
-            android:label="@string/title_activity_sign_in_activiity"
-            android:screenOrientation="portrait">
+            android:name=".ui.activities.AskForRegistration"
+            android:label="@string/title_activity_ask_for_registration" >
         </activity>
         <activity
-            android:name=".ui.activities.SplashScreenActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/FullscreenTheme"
-            android:label=""
-            android:screenOrientation="portrait">
-
+            android:name=".ui.activities.AnswerEmeregencyCallScreen"
+            android:label="@string/title_activity_answer_emeregency_call_screen" >
+        </activity>
+        <activity
+            android:name=".ui.activities.MyProfileActivity"
+            android:label="@string/title_activity_my_profile" >
+        </activity>
+        <activity
+            android:name=".ui.activities.DoctorHistoryActivity"
+            android:label="@string/title_activity_history" >
+        </activity>
+        <activity
+            android:name=".ui.activities.HistoryChatActivity"
+            android:label="@string/title_activity_history_chat" >
         </activity>
     </application>
 
